1.4.0-vcli-alpha Sara

* Modified the MDX connection duplications (Derby can support multiple concurrent
  connections to the DB, as long as they are in the same JVM). This gets rid of the
  results problem reading and the obscure message for autocommit off.

* Fixed the Meandre Client and it failing tests

* Fixed the Meandre Admin Client and its failing tests

* Fixed non-client related failing tests

* Migrated the repository calls that response to POSTs
	- /add
	- /add_flow_description
	
* Migrated the repository calls that response to GETs
	- /dump.txt
	- /regenerate
	- /list_components
	- /list_flows
	- /tags
	- /tags_components
	- /tags_flows
	- /components_by_tag (changed the parameter from q to tag)
	- /components_by_flow (changed the parameter from q to tag)
	- /describe_components
	- /describe_all_components
	- /describe_flows
	- /describe_all_flows
	- /search_components (still does not allow multiple q parameters)
	- /search_flows (still does not allow multiple q parameters)
	- /rename	 

* Migrated the Security service. Also modified the following
	- assign_roles -> grant_roles (for consistency)
	- create_user -> create_users (for consistency)
	- remove_user -> remove_users (for consitency)
	- Added update_user to allow updating the user profile
	
* Migrated the Execution service. Also added the JSON and XML versions to the 
  calls that Amit added involving tokens and quering information from a running
  flow.

* Migrated the Locations service to the new Python-based dispatcher
	(!) Changed the behavior of remove location to only remove the components and
	    flows existing in that location instead of the current regenerate and add
	    which has the potential of getting rid of temporary components/flows added 
	    by a developer

* Migrated the Publish services to the new Python-based dispatcher

* Migrated the Public services to the new Python-based dispatcher

* Migrated the About services to the new Python-based dispatcher
